k8s/istio/catalogs/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogs-vs
spec:
  hosts:
    - catalogs-svc
  http:
  - match:
    - uri:
        prefix: /api/v1/catalogs
    route:
    - destination:
        host: catalogs-svc
        port:
          number: 3000
  - match:
    - uri:
        prefix: /api/v1/internal/catalogs
    route:
    - destination:
        host: catalogs-svc
        port:
          number: 3000
